--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <script src="index.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <div id="game-cont">
+    <div id="game-container">
         <h1>Tic Tac Toe</h1>
         <div class="cell-container">
-            <div class="cell" cellIndex = 0></div>
-            <div class="cell" cellIndex = 1></div>
+            <div class="cell" cellIndex = 0>X</div>
+            <div class="cell" cellIndex = 1>O</div>
             <div class="cell" cellIndex = 2></div>
             <div class="cell" cellIndex = 3></div>
             <div class="cell" cellIndex = 4></div>
