finished the javascript

--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
 <body>
     <div id="game-container">
         <h1>Tic Tac Toe</h1>
-        <div class="cell-container">
-            <div class="cell" cellIndex = 0></div>
-            <div class="cell" cellIndex = 1></div>
-            <div class="cell" cellIndex = 2></div>
-            <div class="cell" cellIndex = 3></div>
-            <div class="cell" cellIndex = 4></div>
-            <div class="cell" cellIndex = 5></div>
-            <div class="cell" cellIndex = 6></div>
-            <div class="cell" cellIndex = 7></div>
-            <div class="cell" cellIndex = 8></div>
+        <div class="cellDiv">
+            <div class="cell-border">
+                <div class="cell-container">
+                    <div class="cell" cellIndex = 0></div>
+                    <div class="cell" cellIndex = 1></div>
+                    <div class="cell" cellIndex = 2></div>
+                    <div class="cell" cellIndex = 3></div>
+                    <div class="cell" cellIndex = 4></div>
+                    <div class="cell" cellIndex = 5></div>
+                    <div class="cell" cellIndex = 6></div>
+                    <div class="cell" cellIndex = 7></div>
+                    <div class="cell" cellIndex = 8></div>
+                </div>
+            </div>
         </div>
         <h2 id="statusText"></h2>
         <button id="restart">Restart</button>
